Removing Instance from supported types